# novels

./: .coveragerc  .dockerignore  .drone.yml  .gitignore  Dockerfile  Pipfile  README.md  development.requirements  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  startup.sh  test_api.rest
.ci/: Dockerfile  add_requirements.sh  delete_django.sql  move_coverage.sh  open_port.py  spawn-processes.sh  startup.sh  windows-start-services.sh
.ci/static/: nginx.conf
api/: __init__.py  pagination.py  serializers.py  urls.py  views.py
app/: __init__.py  celery.py  settings.py  urls.py
monitoring/: urls.py  views.py
novels/: __init__.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
novels/migrations/: 0002_auto_20181216_1709.py  0002_remove_fiction_pic.py  0003_remove_fiction_monitored.py  0004_chapter_updated.py  0005_fiction_source.py  0006_auto_20181229_1637.py  0007_chapter_total_progress.py  0009_word_count_and_highlights.py
novels/processing/: TextRanker.py  __init__.py
profiles/: backends.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
profiles/migrations/: 0001_initial.py  0002_auto_20181226_1106.py  0006_remove_bulkwatchjob_processed.py  0008_auto_20181229_1637.py  0010_unique_together.py  (+2 more)
scrapes/: __init__.py  apps.py  forms.py  models.py  signals.py  tasks.py  test_chapter_generator.py  test_chapter_parser.py  test_latest_parser.py  test_novel_generator.py  test_novel_parser.py  test_tasks.py  urls.py  views.py
src/: manage.py
templates/: base.html  navbar.html  pagination.html
(+182 files in other folders)
