[tool.poetry]
name = "novels"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.2"
celery = "^4.3"
django-celery-results = "^1.1"
requests = "^2.22"
redis = "^3.2"
psycopg2-binary = "^2.8"
lxml = "^4.3"
cssselect = "^1.0"
social-auth-app-django = "^3.1"
django-filter = "^2.2"
djangorestframework = "^3.10"
markdown = "^3.1"
django-cors-headers = "^3.0"
gunicorn = "^19.9"
django-redis-cache = "^2.0"
spacy = "^2.1"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.5"
httmock = "^1.3"
pyyaml = "^5.1"
coverage = "^4.5"
python-language-server = "^0.28.0"
django-coverage-plugin = "^1.6"
django-debug-toolbar = "^2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
